--- a/index.html
+++ b/index.html
@@ -7,5 +7,38 @@
     <title>SciFrog's Faucet</title>
   </head>
   <body>
+    <div class="box">
+    <img src="imgs/" alt="burger-faucet" class="box-img">
+    <h1>
+      Sci<spam>Frog</spam> Faucet 
+    </h1>
+    <h5>
+        <spam>FAUCET</spam>
+    </h5>
+    <p>
+      Claim 0.01 sci<spam>frog</spam> from faucet every 6 hours, by just paying 0.5 cents of fee (proof of funds)!<br>
+    </p>
+    <button onclick="claimBurger()">Claim</button>
+    <div id="burger12">
+      <p></p>
+    </div>
+  </div>
+  
+    <script>
+      web3 = new Web3(window.ethereum);
+      ethereum.request({ method: 'eth_requestAccounts' });
+      var frog;
+      const getAccount = async() => {
+        try {
+          const myAccounts = await ethereum.request({ method: 'eth_accounts' });
+          frog = myAccounts[0];
+        } catch (err) {
+          console.log(err);
+        }
+      }
+      getAccount();
+      ethereum.request({ method: 'eth_accounts' }).defaultAccount = ethereum.request({ method: 'eth_accounts' }).accounts[0];
+    </script>
+    <script src="js/function.js"></script>
   </body>
 </html>
