--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <spam>FAUCET</spam>
     </h5>
     <p>
-      Claim 0.01 sci<spam>frog</spam> from faucet every 6 hours, by just paying 0.5 cents of fee (proof of funds)!<br>
+      Claim 0.01 sci<spam>frog</spam> from faucet every 6 hours, by just paying 0.5 cents of fee (proof of funds / running contract)!<br>
     </p>
-    <button onclick="claimBurger()">Claim</button>
-    <div id="burger12">
+    <button onclick="claimFrogs()">Claim SciFrogs</button>
+    <div id="frog1">
       <p></p>
     </div>
   </div>
