--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <spam>FAUCET</spam>
     </h5>
     <p>
-      Claim 0.01 sci<spam>frog</spam> from faucet every 6 hours, by just paying 0.5 cents of fee (proof of funds / running contract)!<br>
+      Claim 0.01 sci<spam>frog</spam> from faucet every 24 hours!<br>
     </p>
     <button onclick="claimFrogs()">Claim SciFrogs</button>
     <div id="frog1">
