--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <spam>FAUCET</spam>
     </h5>
     <p>
-      Claim 0.01 sci<spam>frog</spam> from faucet every 24 hours!<br>
+      Claim 0.01 sci<spam>frog</spam> from faucet every 24 hours, by paying the fee to run a little contract!<br>
     </p>
     <button onclick="claimFrogs()">Claim SciFrogs</button>
     <div id="frog1">
