--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       Sci<spam>Frog</spam> Faucet 
     </h1>
     <h5>
-        <spam>FAUCET</spam>
+        <spam>-Oliviant</spam>
     </h5>
     <p>
       Claim 0.01 sci<spam>frog</spam> from faucet every 24 hours, by paying the fee to run a little contract!<br>
