--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="box">
-    <img src="imgs/" alt="burger-faucet" class="box-img">
+    <img src="imgs/" alt="scifrog-faucet" class="box-img">
     <h1>
       Sci<spam>Frog</spam> Faucet 
     </h1>
