--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
       ethereum.request({ method: 'eth_accounts' }).defaultAccount = ethereum.request({ method: 'eth_accounts' }).accounts[0];
     </script>
     <script src="js/function.js"></script>
+    <script src="js/contractFaucet.js"></script>
   </body>
 </html>
