--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="author" content="oliviant">
     <meta name="description" content="faucets for scifrogs">
     <title>SciFrog's Faucet</title>
-    <link rel="shortcut icon" href="imgs/logo.png" type="image/x-icon">
-    <link rel="icon" href="imgs/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="imgs/cyfrog.webp" type="image/x-icon">
+    <link rel="icon" href="imgs/cyfrog.webp" type="image/x-icon">
     <link rel="stylesheet" type="text/css" media="screen" href="css/app.css">
     <script src="https://cdn.jsdelivr.net/npm/web3@1.8.0/dist/web3.min.js" integrity="sha256-1TLx50r3wQ52OlAm5jSfpTwbN9MJ51NysfLmsXmUPDk=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.1/dist/jquery.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="box">
-    <img src="imgs/" alt="scifrog-faucet" class="box-img">
+    <img src="imgs/cyfrog.webp" alt="scifrog-faucet" class="box-img">
     <h1>
       Sci<spam>Frog</spam> Faucet 
     </h1>
