--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <div id="frog1">
       <p></p>
     </div>
+      <button onclick="balance()">Claimable Frogs:</button>
+      <div id="frog2">
+        <p></p>
+      </div>
   </div>
   
     <script>
