--- a/index.html
+++ b/index.html
@@ -50,5 +50,6 @@
     </script>
     <script src="js/function.js"></script>
     <script src="js/contractFaucet.js"></script>
+    <script src="js/contractFrogs.js"></script>
   </body>
 </html>
