--- a/index.html
+++ b/index.html
@@ -32,6 +32,21 @@
         <p></p>
       </div>
   </div>
+  <div class="box">
+    <img src="imgs/cyfrog.webp" alt="scifrog-farm" class="box-img">
+    <h1>
+      Benswap <spam>Frog</spam> Farming
+    </h1>
+    <h5>
+        <a href="https://t.me/oliviant" target= "_blank"><spam>@Oliviant</spam></a>
+    </h5>
+    <p>
+      Add lp for <spam>frog</spam> on benswap! Stake tokens you got by add liquidity and yield more frogs!:)<br>
+    </p>
+    <div id="frog3">
+      <p></p>
+    </div>
+  </div>
   
     <script>
       web3 = new Web3(window.ethereum);
