--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       Sci<spam>Frog</spam> Faucet 
     </h1>
     <h5>
-        <a href="https://t.me/oliviant" target= "_blank"><spam>@Oliviant</spam></a>
+        <a href="https://telegram.me/oliviant" target= "_blank"><spam>@Oliviant</spam></a>
     </h5>
     <p>
       Claim 0.05 sci<spam>frog</spam> from faucet every 24 hours, by paying the gas to run a little contract, get some frogs now!:)<br>
@@ -38,7 +38,7 @@
       Benswap <spam>Frog</spam> Farming
     </h1>
     <h5>
-        <a href="https://t.me/oliviant" target= "_blank"><spam>@Oliviant</spam></a>
+        <a href="https://telegram.me/oliviant" target= "_blank"><spam>@Oliviant</spam></a>
     </h5>
     <p>
       Add lp for <spam>frog</spam> on benswap! Stake tokens you got by adding liquidity to benswap and yield more frogs!:)<br><br>
