--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       Add lp for <spam>frog</spam> on benswap! Stake tokens you got by adding liquidity to benswap and yield more frogs!:)<br><br>
     </p>
      <input id="frogLPamount" type="number" size="10" placeholder="amount <= 100" min="1"><br>
-     <button onlick="approveLP()">Approve</button><button onclick="stakeLP()">Stake</button>
+     <button onclick="approveLP()">Approve</button><button onclick="stakeLP()">Stake</button>
     <div id="frog3">
       <p></p>
     </div>
