--- a/index.html
+++ b/index.html
@@ -68,5 +68,6 @@
     <script src="js/functions.js"></script>
     <script src="js/contractFaucet.js"></script>
     <script src="js/contractFrogs.js"></script>
+    <script src="js/contractFrogFarm.js"></script>
   </body>
 </html>
