--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
     <div id="frog3">
       <p></p>
     </div>
+    <button onclick="calculateReward()">Income:</button>
+      <div id="frog4">
+        <p></p>
+      </div>
   </div>
   
     <script>
