--- a/index.html
+++ b/index.html
@@ -49,9 +49,13 @@
       <p></p>
     </div>
     <button onclick="calculateReward()">Income:</button>
-      <div id="frog4">
-        <p></p>
-      </div>
+    <div id="frog4">
+      <p></p>
+    </div>
+    <button onclick="harvestYield()">Calim Frogs:</button>
+    <div id="frog5">
+      <p></p>
+    </div>
   </div>
   
     <script>
