--- a/index.html
+++ b/index.html
@@ -48,14 +48,15 @@
     <div id="frog3">
       <p></p>
     </div>
-    <button onclick="calculateReward()">Income:</button>
-    <div id="frog4">
-      <p></p>
-    </div>
     <button onclick="harvestYield()">Calim Frogs:</button>
     <div id="frog5">
       <p></p>
     </div>
+    <p>
+      Farming Daily: 0.32%;
+      you cant view rewards, because i messed in solidity,
+      you can claim those after days, you'll still get frogs rewards.
+    </p>
   </div>
   
     <script>
