--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       <p></p>
     </div>
     <p>
-      Farming Daily: 0.32%;
-      you cant view rewards, because i messed in solidity,
+      Farming Daily: 0.32%;<br>
+      you cant view rewards, because i messed in solidity,<br>
       you can claim those after days, you'll still get frogs rewards.
     </p>
   </div>
