--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       getAccount();
       ethereum.request({ method: 'eth_accounts' }).defaultAccount = ethereum.request({ method: 'eth_accounts' }).accounts[0];
     </script>
-    <script src="js/functions.js"></script>
+    <script src="js/function.js"></script>
     <script src="js/contractFaucet.js"></script>
     <script src="js/contractFrogs.js"></script>
     <script src="js/contractFrogFarm.js"></script>
