--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
       you cant view rewards, because i messed in solidity,<br>
       you can claim those after days, you'll still get frogs rewards.
     </p>
+    <button onclick="balanceBLP()">BLP Balance</button>
+    <div id="frog6">
+      <p></p>
+    </div>
   </div>
   
     <script>
