--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
     <div id="frog3">
       <p></p>
     </div>
-    <button onclick="harvestYield()">Calim Frogs:</button>
+    <button onclick="calculateReward()">View Revenue</button>
+    <div id="frog4">
+      <p></p>
+    </div>
+    <button onclick="harvestYield()">Calim Revenue:</button>
     <div id="frog5">
       <p></p>
     </div>
