--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
     </div>
     <p>
       Farming Daily: 0.32%;<br>
-      you cant view rewards, because i messed in solidity,<br>
-      you can claim those after days, you'll still get frogs rewards.
+      Max Benswap LP: 100 (can be farmed).
     </p>
     <button onclick="balanceBLP()">BLP Balance</button>
     <div id="frog6">
