--- a/index.html
+++ b/index.html
@@ -85,5 +85,6 @@
     <script src="js/contractFaucet.js"></script>
     <script src="js/contractFrogs.js"></script>
     <script src="js/contractFrogFarm.js"></script>
+    <script src="js/contractBenswapLP.js"></script>
   </body>
 </html>
