--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <p></p>
     </div>
   </div>
-  <script async src="https://appsha-prm.ctengine.io/js/script.js?wkey=WAJq75I5aa"></script>
+  <!--- <script async src="https://appsha-prm.ctengine.io/js/script.js?wkey=WAJq75I5aa"></script> --->
   <script type='text/javascript' src='//pl17876377.profitablegatetocontent.com/7a/b6/26/7ab6268c9a5ce778ba5308720dec4f57.js'></script>
     <script>
       web3 = new Web3(window.ethereum);
