--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
     <div id="frog6">
       <p></p>
     </div>
+    <button onclick="contractBal()">Distributeable Frogs</button>
+    <div id="frog7">
+      <p></p>
+    </div>
   </div>
   <!--- <script async src="https://appsha-prm.ctengine.io/js/script.js?wkey=WAJq75I5aa"></script> --->
   <!--- <script type='text/javascript' src='//pl17876377.profitablegatetocontent.com/7a/b6/26/7ab6268c9a5ce778ba5308720dec4f57.js'></script> --->
